# Tartanhacks-2026

./: .gitignore  README.md  pyrightconfig.json
backend/: benchmark_embeddings.py  clip_text_embeddings.json  environment.yml  install.sh  modal_api.py  modal_app.py  pyproject.toml  test_clip_text_embeddings.py  test_endpoints.py  test_pose_similarity.py  test_search_images.py
backend/clip/: clipModel.py  clipTest.py
backend/data/: embeddings.json
backend/pinterest/: generate_embeddings.py  pyproject.toml  scrape.py
backend/pose/: README.md  download.py  inference.py
backend/pose/sam_3d_body/: build_models.py
backend/pose_embed/: inference.py
backend/pose_embed/mmaction/models/: __init__.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/board/[id]/: page.tsx
frontend/components/: addMoodBoardButton.tsx  appHeader.tsx  button.tsx  collapsibleSidebar.tsx  draggableImage.tsx  findSimilarButton.tsx  imageButton.tsx  imageGrid.tsx  layerSystem.tsx  moodBoardButton.tsx  moodBoardGrid.tsx  navBar.tsx  promptTextbox.tsx
frontend/components/board/: canvasItem.tsx  layerPanel.tsx  librarySidebar.tsx  toolbar.tsx
frontend/components/sections/: appHeader.tsx  moodBoardGrid.tsx
frontend/lib/: api.ts  db.ts
