[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "appnope>=0.1.4",
    "argparse>=1.4.0",
    "black>=26.1.0",
    "chump>=1.6.0",
    "cython>=3.2.4",
    "dill>=0.4.1",
    "einops>=0.8.2",
    "ffmpeg>=1.4",
    "fvcore>=0.1.5.post20221221",
    "h5py>=3.15.1",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.4.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "imageio>=2.37.2",
    "joblib>=1.5.3",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "modal>=1.3.2",
    "networkx==3.2.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "optree>=0.18.0",
    "pandas>=3.0.0",
    "pinterest-dl>=1.1.0",
    "pycocotools>=2.0.11",
    "pyrender>=0.1.45",
    "pyrootutils>=1.0.4",
    "pytest>=9.0.2",
    "pytorch-lightning>=2.6.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "roma>=1.5.5",
    "scikit-image>=0.26.0",
    "scikit-video>=1.1.11",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.24",
    "torch==2.8.*",
    "transformers>=5.1.0",
    "wandb>=0.24.2",
    "webdataset>=1.0.2",
    "xtcocotools>=1.14.3",
    "yacs>=0.1.8",
]
[tool.uv]
no-build-isolation-package = ["xtcocotools"]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git", rev = "dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1" }
