[project]
name = "pinterest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neskech", email = "neskechastro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
